--- a/css/queries.css
+++ b/css/queries.css
@@ -23,3 +23,133 @@
     grid-template-columns: 1fr 1fr;
   }
 }
+
+/*********************/
+/* BELOW 1072PX (smaller desktop) */
+/*********************/
+
+@media (max-width: 67em) {
+  .header-primary {
+    font-size: 3.6rem;
+  }
+
+  .heading-secondary {
+    font-size: 2.8rem;
+    margin-bottom: 6.4rem;
+  }
+
+  .heading-tertiary {
+    font-size: 2.4rem;
+  }
+
+  .hero-description {
+    font-size: 1.6rem;
+  }
+
+  .logos img {
+    height: 2.4rem;
+  }
+
+  .how-section {
+    padding: 9.4rem 6.4rem 6.4rem;
+  }
+
+  .section-meals {
+    padding: 6.4rem;
+  }
+
+  .meal-name {
+    font-size: 1.6rem;
+  }
+
+  .meal-attribute span {
+    font-size: 1.4rem;
+  }
+
+  .list-item {
+    font-size: 1.6rem;
+  }
+
+  .testimonials-container {
+    padding: 6.4rem;
+  }
+
+  .testimonials-box {
+    grid-template-columns: 1fr;
+  }
+
+  .testimonial {
+    display: flex;
+    flex-direction: column;
+    padding: 0 4.8rem;
+  }
+
+  .customer-img {
+    align-self: center;
+  }
+
+  .customer-opinion {
+    line-height: 1.5;
+    font-size: 1.6rem;
+  }
+
+  .gallery {
+    grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr;
+  }
+
+  .section-pricing {
+    padding: 6.4rem;
+  }
+
+  .pricing-option--complete::after {
+    top: 7%;
+    right: -24%;
+  }
+
+  .feature-title {
+    font-size: 1.8rem;
+    text-align: center;
+  }
+
+  .feature-description {
+    font-size: 1.6rem;
+    text-align: center;
+  }
+
+  .cta-heading {
+    font-size: 3.6rem;
+  }
+
+  .cta-description {
+    font-size: 1.6rem;
+  }
+
+  .cta-form label {
+    font-size: 1.4rem;
+  }
+
+  .cta-form input,
+  .cta-form select,
+  .cta-form button {
+    font-size: 1.4rem;
+  }
+
+  .footer {
+    margin: 6.4rem 0;
+    padding-top: 6.4rem;
+    grid-template-columns: 1fr 1fr 1fr;
+    row-gap: 4.8rem;
+  }
+
+  .footer-col:first-child {
+    grid-column: 1 / 3;
+  }
+
+  .footer-heading {
+    padding-bottom: 1.2rem;
+  }
+
+  .list-item-footer {
+    font-size: 1.4rem;
+  }
+}
